# CE2103-Algoritmos-Estructuras-Datos2

./: Bitácora.odt  README.md
CPP_Programs/: CMakeLists.txt  main.cpp
TareaExtraclase1/Client/: Client.pro  socket.cpp  socket.h  widget.cpp  widget.h  widget.ui
TareaExtraclase1/QTClient/: main.cpp  widget.cpp  widget.ui
TareaExtraclase1/Server/: CMakeLists.txt  Graph.cpp  Graph.h  NodeG.cpp  NodeG.h  Socket.cpp  Socket.h  TecList.h  Vertex.cpp  Vertex.h  main.cpp
TareaExtraclase1/Server/Pruebas/: Employee.cpp  Employee.h  Person.cpp  Person.h  Student.cpp  Student.h
TareaExtraclase1/Server/Util/: Edge.cpp  Edge.h  Graph.cpp  Graph.h  Node.cpp  Node.h  TECList.cpp  TECList.h  main.cpp
TareaExtraclase1/build-Client-Desktop_Qt_5_14_1_GCC_64bit-Debug/: Client  Makefile  moc_widget.cpp  ui_widget.h
TareaExtraclase2/AbstractFactory_DesignPattern/: CMakeLists.txt
client/: main.c
server/: main.c
